--- a/WebContent/muro.html
+++ b/WebContent/muro.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="js/sports.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/load.js"></script>
 
   <title>Muro SocialSport</title>
   <!-- Latest compiled and minified CSS -->
@@ -20,35 +21,11 @@
 </head>
 <body>
 
- <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container">
-   <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target =".navbar-collapse">
-     <span class="sr-only">Toggle navigation</span>
-     <span class="icon-bar"></span>
-     <span class="icon-bar"></span>
-     <span class="icon-bar"></span>
-   </button>
-   <a class="navbar-brand" href="#">Social Sport</a>
+ <div>
+      <div id="topBar" />
  </div>
- <div class="navbar-collapse collapse">
-  <ul class="nav navbar-nav navbar-right">
-   <li class="active"><a href="muro.html">Home</a></li>
-   <li>
-    <a href="#">About</a>
-  </li>
-  <li>
-    <a href="profile.html">Perfil</a>
-  </li>
-  <li> 
-    <a href="signup.html">Cerrar sesión</a>
-  </li>
-  </ul>
-  </div>
-</div>
-</div>
 
-<div class="container" >
+ <div class="container" >
   <div class="jumbotron text-center">
    <h1><font color=white background-color=black> Bienvenido a Social Sport </font></h1>
    <h3><font color=white> La red social que te acercará al mundo del deporte </font></h3>
@@ -84,17 +61,6 @@
   </div>
 </div>
 </div>
-
-
-<div class="row">
- <div class="col-lg-12 text-center">
-  <div class="col-sm-offset-4 col-sm-4 text-center">
-   <br />
-   <div id="resultff" />
- </div>
-</div>
-</div>
-
 
 
 <div class="modal fade text-center" id="añadeDeportes" role="dialog">
