--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -14,40 +14,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/profile.js"></script>
+    <script type="text/javascript" src="js/load.js"></script>
 
     <title>Perfil de Usuario</title>
   </head>
   <body>
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target =".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="muro.html">Social Sport</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="muro.html">Home</a>
-            </li>
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li class="active">
-              <a href="profile.html">Perfil</a>
-            </li>
-            <li> 
-              <a href="signup.html">Cerrar sesión</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
+  
+  	<script>
+  		$(document).ready(
+  		    function() {
+  		    	$("#topBar").load("topBar.html");
+  		 });
+   	</script>
 
+    <div>
+      <div id="topBar" />
+    </div>
+	
     <section>
 
       <div class="container" style="margin-top: 80px;">
@@ -62,54 +45,14 @@
             <h5>Jenifer Smith</h5>
             <p>Web Designer / Develpor </p>
             <ul>
-              <li><span class="glyphicon glyphicon-home"></span> 555 street Address,toedo 43606 U.S.A.</li>
+              <li><span class="glyphicon glyphicon-home"></span> 555 street Address,toledo 43606 U.S.A.</li>
               <li><span class="glyphicon glyphicon-phone"></span> <a href="#" title="call">(+021) 956 789123</a></li>
               <li><span class="glyphicon glyphicon-envelope"></span><a href="#" title="mail">jenifer123@gmail.com</a></li>
             </ul>
-          </div><!--col-md-8 col-sm-8 col-xs-12 close-->
-
-          <div class="searhFriend">
-            <ul class="navbar-right">
-              <li><a data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-search"></span> Buscar Amigos</a></li>
-            </ul>
           </div>
+
         </div><!--profile-head close-->
       </div><!--container close-->
-
-      <div class="container">
-        <!-- Modal -->
-        <div class="modal fade" id="myModal" role="dialog">
-          <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">×</button>
-                <h4 class="modal-title">Buscar Amigos</h4>
-              </div>
-              <div class="modal-body">
-                <section class="search-box1" id="panel">
-                  <div class="container">
-                    <form class="form-inline" role="form">
-                      <div class="col-sm-8 col-xs-8 form-group top_search" style="padding-right:0px;">
-                        <div class="row">
-                          <span class="serach-footer"><img src="images/srch.png" /></span>
-                          <input type="text" class="form-control search-wrap" id="search" placeholder="Busca aquí...">
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-4 col-xs-4 form-group top_search" style="padding-left:0px;">
-                          <button type="submit" class="btn btn-default search-btn">BUSCAR</button>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                </section>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <div id="sticky" class="container">
         <!-- Nav tabs -->
