--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,7 +26,7 @@
             <p class="lead">Bienvenido a Social Sport, un poderoso medio por el cual deportistas y aficionados se dan encuentro para compartir su pasión:<br>El mundo del deporte.
             </p>
 
-            <p class="lead"><a class="btn btn-lg btn-info" href="signup.html">Iniciar</a></p>
+            <p class="lead"><a class="btn btn-lg btn-info" id='iniciar' href="signup.html">Iniciar</a></p>
           </div>
 
           <div class="mastfoot">
