--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -37,11 +37,11 @@
 							<div class="col-lg-12">
 								<form id="login-form" action="/Servidor/usuarios" method="get" role="form" style="display: block;">
 									<div class="form-group">
-										<input  type="email" name="email" id="email" tabindex="1" class="form-control" 
+										<input  type="email" name="emailL" id="emailL" tabindex="1" class="form-control" 
 										placeholder="Email" value="">
 									</div>
 									<div class="form-group">
-										<input type="password" name="contrasena" id="contrasena" tabindex="2" class="form-control" placeholder="Password">
+										<input type="password" name="contrasenaL" id="contrasenaL" tabindex="2" class="form-control" placeholder="Password">
 									</div>
 									<div class="form-group text-center">
 										<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
@@ -60,10 +60,10 @@
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username">
 									</div>
 									<div class="form-group">
-										<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address">
+										<input type="email" name="emailR" id="emailR" tabindex="1" class="form-control" placeholder="Email Address">
 									</div>
 									<div class="form-group">
-										<input type="password" name="contrasena" id="contrasena" tabindex="1" class="form-control" placeholder="Password">
+										<input type="password" name="contrasenaR" id="contrasenaR" tabindex="1" class="form-control" placeholder="Password">
 									</div>
 									<div class="form-group">
 										<input type="text" name="apellidos" id="apellidos" tabindex="1" class="form-control" placeholder="Apellido">
